<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>jpvu</groupId>
    <artifactId>appium_sandbox_mvnbuild</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <appiumVersion>8.3.0</appiumVersion>
        <testNgVersion>7.7.1</testNgVersion>
        <seleniumVersion>4.9.0</seleniumVersion>
        <slf4jVersion>2.0.7</slf4jVersion>
        <mvnCompilerVersion>3.11.0</mvnCompilerVersion>
        <mvnSurefireVersion>3.0.0</mvnSurefireVersion> <!--3.0.0-M5-->

        <jvmOptions>--add-opens java.base/java.lang=ALL-UNNAMED</jvmOptions>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>${appiumVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testNgVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${seleniumVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4jVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4jVersion}</version>
        </dependency>

    </dependencies>

    <!--maven workaround for page factory initialization, not working with gradle build-->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${mvnCompilerVersion}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${mvnSurefireVersion}</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>
                            src/test/resources/TestNG.xml
                        </suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>${jvmOptions}</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>